// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations createPost 1`] = `
Object {
  "data": Object {
    "createPost": Object {
      "message": "hello",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`mutations updateSettings 1`] = `
Object {
  "data": Object {
    "updateSettings": Object {
      "theme": "DARK",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
